hphp/hack/test/typecheck/const_collections/const_darray_modify.php.exp
File "const_darray_modify.php", line 6, characters 5-8:
Invalid lvalue (Parsing[1002])
